# gpt-disk-rs

./: .deny.toml  CHANGELOG.md  Cargo.toml  README.md  easy.md
.github/: dependabot.yml  renovate.json
.github/workflows/: ci.yaml  msrv_toolchain.toml  release.yml
compilation_test/: Cargo.toml  README.md
compilation_test/tests/: compilation_test.rs
compilation_test/tests/ui/: guid_len.rs  guid_len.stderr
docs/: release_process.md
gpt_disk_io/: CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md
gpt_disk_io/examples/: reader.rs
gpt_disk_io/src/: block_io.rs  disk.rs  easy.rs  lib.rs  slice_block_io.rs  std_support.rs
gpt_disk_io/src/block_io/: slice_block_io.rs  std_block_io.rs
gpt_disk_io/tests/: disk.bin.bz2  test_block.rs  test_block_io.rs  test_crc32.rs  test_disk.rs  test_guid.rs  test_header.rs  test_layout.rs  test_mbr.rs  test_num.rs  test_partition_array.rs  test_partition_entry.rs
gpt_disk_io/tests/common/: mod.rs
gpt_disk_types/: CHANGELOG.md  Cargo.toml  README.md
gpt_disk_types/src/: block.rs  crc32.rs  guid.rs  header.rs  lib.rs  mbr.rs  num.rs  partition_array.rs  partition_entry.rs  std_support.rs
uguid/: CHANGELOG.md  Cargo.toml  README.md
uguid/examples/: guid_info.rs
uguid/src/: aligned.rs  aligned_guid.rs  error.rs  guid.rs  guid_impl.rs  guid_parse.rs  guid_serde.rs  guid_template.rs  lib.rs  unaligned.rs  unaligned_guid.rs  util.rs
uguid/tests/: test_aligned_guid.rs  test_alignment.rs  test_conv.rs  test_guid.rs  test_macro_error.rs  test_serde.rs  test_uguid.rs
uguid/tests/ui/: guid_hex.rs  guid_hex.stderr  guid_len.rs  guid_len.stderr  guid_sep.rs  guid_sep.stderr
xtask/: Cargo.toml
xtask/src/: main.rs  package.rs  release.rs  util.rs
