# Copyright 2022 Google LLC
#
# Licensed under the Apache License, Version 2.0 <LICENSE-APACHE or
# https://www.apache.org/licenses/LICENSE-2.0> or the MIT license
# <LICENSE-MIT or https://opensource.org/licenses/MIT>, at your
# option. This file may not be copied, modified, or distributed
# except according to those terms.

[workspace]
members = [
  "gpt_disk_io",
  "gpt_disk_types",
  "uguid",
  "xtask",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/google/gpt-disk-rs"
rust-version = "1.68"

[workspace.dependencies]
bytemuck = { version = "1.4.0", default-features = false }
