# Copyright 2022 Google LLC
#
# Licensed under the Apache License, Version 2.0 <LICENSE-APACHE or
# https://www.apache.org/licenses/LICENSE-2.0> or the MIT license
# <LICENSE-MIT or https://opensource.org/licenses/MIT>, at your
# option. This file may not be copied, modified, or distributed
# except according to those terms.

[package]
name = "compilation_test"
version = "0.0.0"
edition = "2021"
publish = false

[dev-dependencies]
trybuild = "1.0.0"
uguid = { path = "../uguid" }
