# Copyright 2022 Google LLC
#
# Licensed under the Apache License, Version 2.0 <LICENSE-APACHE or
# https://www.apache.org/licenses/LICENSE-2.0> or the MIT license
# <LICENSE-MIT or https://opensource.org/licenses/MIT>, at your
# option. This file may not be copied, modified, or distributed
# except according to those terms.

[package]
name = "gpt_disk_io"
version = "0.15.0"
edition = "2021"
rust-version = "1.60"

categories = ["data-structures", "embedded", "no-std"]
description = "GPT (GUID Partition Table) disk IO no_std library"
keywords = ["disk", "gpt", "no_std", "partition", "uefi"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/google/gpt-disk-rs"

[dependencies]
bytemuck = { version = "1.4.0", default-features = false }
gpt_disk_types = { version = "0.15.0", path = "../gpt_disk_types", features = ["bytemuck"] }

[dev-dependencies]
anyhow = "1.0.0"
bzip2-rs = "0.1.2"

[features]
# See module docstring in src/lib.rs for details of what this feature does.
std = ["gpt_disk_types/std"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
