# Copyright 2022 Google LLC
#
# Licensed under the Apache License, Version 2.0 <LICENSE-APACHE or
# https://www.apache.org/licenses/LICENSE-2.0> or the MIT license
# <LICENSE-MIT or https://opensource.org/licenses/MIT>, at your
# option. This file may not be copied, modified, or distributed
# except according to those terms.

[package]
name = "gpt_disk_io"
version = "0.16.1"
categories = ["data-structures", "embedded", "no-std"]
description = "GPT (GUID Partition Table) disk IO no_std library"
keywords = ["disk", "gpt", "no_std", "partition", "uefi"]

edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
bytemuck.workspace = true
gpt_disk_types = { version = "0.16.0", path = "../gpt_disk_types", features = ["bytemuck"] }

[features]
# See module docstring in src/lib.rs for details of what these feature do.
alloc = []
std = ["alloc", "gpt_disk_types/std"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
