# Copyright 2022 Google LLC
#
# Licensed under the Apache License, Version 2.0 <LICENSE-APACHE or
# https://www.apache.org/licenses/LICENSE-2.0> or the MIT license
# <LICENSE-MIT or https://opensource.org/licenses/MIT>, at your
# option. This file may not be copied, modified, or distributed
# except according to those terms.

[package]
name = "gpt_disk_types"
version = "0.13.0"
edition = "2021"

categories = ["data-structures", "embedded", "no-std"]
description = "GPT (GUID Partition Table) disk data types no_std library"
keywords = ["disk", "gpt", "no_std", "partition", "uefi"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/google/gpt-disk-rs"

[dependencies]
bytemuck = { version = "1.9.1", features = ["derive"] }
crc = "3.0.0"
uguid = { version = "1.0.0", path = "../uguid", features = ["bytemuck"] }
ucs2 = "0.3.2"

[features]
std = []

[package.metadata.docs.rs]
all-features = true
