# Copyright 2022 Google LLC
#
# Licensed under the Apache License, Version 2.0 <LICENSE-APACHE or
# https://www.apache.org/licenses/LICENSE-2.0> or the MIT license
# <LICENSE-MIT or https://opensource.org/licenses/MIT>, at your
# option. This file may not be copied, modified, or distributed
# except according to those terms.

[package]
name = "gpt_disk_types"
version = "0.16.1"
categories = ["data-structures", "embedded", "no-std"]
description = "GPT (GUID Partition Table) disk data types no_std library"
keywords = ["disk", "gpt", "no_std", "partition", "uefi"]

edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
bytemuck = { workspace = true, features = ["derive"], optional = true }
crc = "3.0.0"
uguid = { version = "2.1.0", path = "../uguid" }
ucs2 = "0.3.2"

[features]
# See module docstring in src/lib.rs for details of what these features do.
bytemuck = ["dep:bytemuck", "uguid/bytemuck"]
std = ["uguid/std"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
