# Copyright 2022 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "uguid"
version = "0.5.0"
edition = "2021"

categories = ["data-structures", "embedded", "no-std"]
description = "GUID (Globally Unique Identifier) no_std library"
keywords = ["gpt", "guid", "no_std", "uefi"]
license = "Apache-2.0"
repository = "https://github.com/google/gpt-disk-rs"

[dependencies]
bytemuck = { version = "1.9.1", features = ["derive"] }
serde = { version = "1.0.137", default-features = false, features = ["derive"], optional = true }

[dev-dependencies]
serde_test = "1.0.137"

[features]
serde = ["dep:serde"]
std = []

[package.metadata.docs.rs]
all-features = true
