# Copyright 2022 Google LLC
#
# Licensed under the Apache License, Version 2.0 <LICENSE-APACHE or
# https://www.apache.org/licenses/LICENSE-2.0> or the MIT license
# <LICENSE-MIT or https://opensource.org/licenses/MIT>, at your
# option. This file may not be copied, modified, or distributed
# except according to those terms.

[package]
name = "uguid"
version = "1.0.2"
edition = "2021"

categories = ["data-structures", "embedded", "no-std"]
description = "GUID (Globally Unique Identifier) no_std library"
keywords = ["gpt", "guid", "no_std", "uefi"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/google/gpt-disk-rs"

[dependencies]
bytemuck = { version = "1.9.1", features = ["derive"], optional = true }
serde = { version = "1.0.137", default-features = false, features = ["derive"], optional = true }

[dev-dependencies]
serde_test = "1.0.137"

[features]
bytemuck = ["dep:bytemuck"]
serde = ["dep:serde"]
std = []

[package.metadata.docs.rs]
all-features = true
